# test_github_issues_viewer

./: README.md  repos_with_lots_of_issues
project/: CMakeLists.txt  main.cpp
project/qml/: Main.qml
project/src/: GithubClient.cpp  GithubClient.h  IssuesModel.cpp  IssuesModel.h  OfflineCache.cpp  OfflineCache.h  RepoParser.h
